# openpaw

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  Makefile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
contracts/: README.md
contracts/commands/: v0.json
contracts/events/: v0.json
deploy/k8s-cloud/: README.md
deploy/local-pi/: README.md
docs/: naming-conventions.md
docs/adr/: ADR-001-ddd-lite-workflow-first.md  ADR-002-asset-as-sot-ledger.md  ADR-003-policy-routing.md  ADR-004-outbox-inbox-idempotency.md  ADR-005-privacy-boundary.md
docs/agent-teams/: assignments.md
docs/architecture-diagrams/: INDEX-CHECKLIST.md  L0-overall-architecture.md  L1-domain-landscape.md  L1-event-flows-overview.md  L1-runtime-topology.md  README.md
docs/architecture-diagrams/components/: L2-event-bus-reliability.md  L2-policy-engine.md  L2-sync-agent.md
docs/architecture-diagrams/domains/: L2-asset-registry.md  L2-feedback.md  L2-identity.md  L2-marketplace.md  L2-reputation.md  L2-rewards-ledger.md
docs/architecture-diagrams/workflows/: L2-bounty-fulfillment.md  L2-correction-validation.md  L2-retrieve-or-generate.md  L2-reward-settlement.md  L2-sync-publish-flow.md  L2-video-workflow.md
docs/context-packs/: L0-vision-glossary.md  L1-domain-map.md
domains/asset_registry/: README.md
domains/marketplace/: README.md
domains/rewards_ledger/: README.md
platform/policy_engine/: README.md
tests/contracts/: README.md
workflows/retrieve_or_generate/: state_machine.md
workflows/shared/: README.md
